--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </div>
         </div>
         <div>
-            <a href="index.html">
+            <a href="tienda.html">
             <button>
               <h1>Click aqui -> DOMINIUS SHOP TE ESPERA! <span class="txtRojo">LAS MEJORES PRENDAS PARA GIMNASIO <- click aqui</span></h1>
             </button>
